# homework

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
api/: __init__.py  post_create.py  post_detail.py  post_feed.py  post_search.py
core/: settings.py
indexer/: index.py  schemas.py  service.py  utils.py
