[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Artur Spatari <artur.spatari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sortedcontainers = "^2.4.0"
feedgen = "^0.9.0"


[tool.poetry.group.dev.dependencies]
devtools = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
